
  [ Justin B Rye ]
  * doc/apt-cdrom.8.xml:
    - replace CDROM with the proper CD-ROM in text
    - correct disc vs. disk issues
  * doc/apt-extracttemplates.1.xml:
    - debconf is not DebConf
  * doc/apt-get.8.xml:
    - move dselect-upgrade below dist-upgrade
    - review and fix spelling issues
  * doc/apt-ftparchive.8.xml, doc/apt-config.8.xml,
    doc/apt-key.8.xml, doc/apt-mark.8.xml,
    doc/apt_preferences.5.xml, doc/apt-secure.8.xml:
    - review and fix typo, grammar and style issues

  [ Robert Luberda ]
  * Polish manpage translation update (Closes: #675603)
  * doc/apt-mark.8.xml:
    - in hold, the option name is --file not --filename

  [ Christian Perrier ]
  * French program and manpage translation update
  * Danish program translation by Joe Hansen. Closes: #675605

 -- David Kalnischkies <kalnischkies@gmail.com>  Wed, 06 Jun 2012 23:54:01 +0200

apt (0.9.5.1) unstable; urgency=low

  [ David Kalnischkies ]
  * apt-pkg/contrib/fileutl.cc:
    - dup() given compressed fd in OpenDescriptor if AutoClose
      is disabled as otherwise gzclose() and co will close it
  * doc/*.xml:
    - mark even more stuff as untranslateable and improve the
      markup here and there (no real text change)
    - use docbook DTD 4.5 instead of 4.2 to have valid docs

  [ Justin B Rye ]
  * doc/*.xml:
    - remove 'GNU/Linux' from 'Debian systems' strings as Debian
      has more systems than just GNU/Linux nowadays
  * doc/apt-cache.8.xml:
    - fix a typo as well as adding missing literal markup
    - three small rewordings for better english sentences

 -- Michael Vogt <mvo@debian.org>  Thu, 24 May 2012 17:16:34 +0200

apt (0.9.5) unstable; urgency=low

  [ Chris Leick ]
  * proofreading of the manpage pot
  * German manpage translation update (Closes: #673294)

  [ David Kalnischkies ]
  * buildlib/podomain.mak:
    - ensure that all sources end up in the srclist so that we don't
      forget to extract half of the translation strings
  * buildlib/inttypes.h.in: