@@ -36,13 +36,13 @@
  &synopsis-command-apt-sortpkgs;
 
  <refsect1><title>Description</title>
-   <para><command>apt-sortpkgs</command> will take an index file (Source index or Package 
+   <para><command>apt-sortpkgs</command> will take an index file (source index or package 
    index) and sort the records so that they are ordered by the package name. 
    It will also sort the internal fields of each record according to the 
    internal sorting rules.</para>
 
    <para>
-   All output is sent to stdout, the input must be a seekable file.</para>
+   All output is sent to standard output; the input must be a seekable file.</para>
  </refsect1>
  
  <refsect1><title>options</title>
@@ -51,7 +51,7 @@
    <variablelist>
      <varlistentry><term><option>-s</option></term><term><option>--source</option></term>
      <listitem><para>
-     Use Source index field ordering.
+     Use source index field ordering.
      Configuration Item: <literal>APT::SortPkgs::Source</literal>.</para></listitem>
      </varlistentry>
    
