@@ -27,7 +27,8 @@ apt (0.9.5.2) UNRELEASED; urgency=low
     - review and fix spelling issues
   * doc/apt-ftparchive.8.xml, doc/apt-config.8.xml,
     doc/apt-key.8.xml, doc/apt-mark.8.xml,
-    doc/apt_preferences.5.xml, doc/apt-secure.8.xml:
+    doc/apt_preferences.5.xml, doc/apt-secure.8.xml,
+    doc/apt-sortpkgs.1.xml:
     - review and fix typo, grammar and style issues
 
   [ Robert Luberda ]
